--- a/main.css
+++ b/main.css
@@ -1,21 +1,20 @@
 body {
-	background-color: rgb(211, 225, 235);
+	background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 70%);
 }
 
 /* Images */
 img {
-        border: 5px dashed#ffffff;
-        border-radius: 5%;
+        background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 70%);
 }
 
 /* Page Title */
 h1 {
 	font-weight: bold;
-	color: rgba(255, 244, 79, 0.8);
+	color: #ffffff;
 	font-family: Trebuchet MS;
 	text-align: center;
 	margin: 0px;
-	padding: 0px;
+	padding: 2%;
 }
 
 /* Projects Title */
@@ -32,6 +31,7 @@ h2 {
 p {
 	margin: 0px;
 	padding: 0px;
+   	color: #ffffff;
 }
 
 /* Projects Description */
@@ -42,15 +42,23 @@ p2 {
         padding: 0px;
 }
 
+/* Title Box */
+#Title {
+	background: linear-gradient(150deg, #00008b 60%, #ee82ee 60%);
+	border-radius: 5px;
+	padding: 2%;
+	margin: 0%;
+}
+
 /* Projects Box */
 #Projects {
-  background-color:  #fff8dc;
-  border: 8px solid#fff700;
-  border-radius: 15% 10%;
-  padding: 4%;
-  margin: 2%;
-  animation: projectboxglow 5s infinite;
+	background-color:  #fff8dc;
+	border: 8px solid#8b4600;
+	border-radius: 10px;
+	padding: 4%;
+	margin: 2%;
+	animation: projectboxglow 5s infinite;
 }
 @keyframes projectboxglow {
-  50% {box-shadow: 4px 4px 4px #ff3503;}
+	50% {box-shadow: 4px 4px 4px #ff3503;}
 }
