--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ a {
 .Body h1 {
     font-size: 50px;
 	font-weight: bold;
-	color: #c71585;
+	color: #1fb25f;
 	font-family: Trebuchet MS;
 	text-align: center;
 	margin: 5px;
@@ -172,7 +172,7 @@ a {
     display: block;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
-    color: #000000;
+    color: #111909;
     text-align: center;
     padding: 0% 10%;
 }
@@ -409,7 +409,8 @@ a {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 560px) {
   .prev, .next {font-size: 11px}
-  .nav-link {font-size: 10px}
+  .nav-link {font-size: 8px}
+  .Body p2 {font-size: 12px}
 }
 
 .footer {
