--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ html {
 
 body {
     margin: 0%;
+    background-color: #ffffff;
 }
 
 .TotalBackground {
@@ -153,7 +154,7 @@ a {
 .Body h1 {
     font-size: 50px;
 	font-weight: bold;
-	color: #1fb25f;
+	color: #8d0b0b;
 	font-family: Trebuchet MS;
 	text-align: center;
 	margin: 5px;
